--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
             </iframe>
         </section>
         <section id="redes-sociais">
-                <a href="#" target="tela"> <img src="./imagens/logo-home.jpg" alt="home"></a><br>
-                <a href="https://www.facebook.com/vitor.alexandre.5811877" target="tela"> <img src="./imagens/logo-facebook.jpg" alt="facebook"></a><br>
-                <a href="" target="tela"> <img src="./imagens/logo-instagram.jpg" alt="instagram"></a><br>
-                <a href="https://github.com/VitorAle01" target="tela"> <img src="./imagens/logo-github.jpg" alt="github"></a><br>
-                <a href="https://www.linkedin.com/in/vitor-alexandre-1280021ba/" target="tela"> <img src="./imagens/logo-linkedin.jpg" alt="linkedin"></a><br>
+                <a href="./home.html" target="tela"> <img src="./imagens/logo-home.jpg" alt="home"></a><br>
+                <a href="./facebook.html" target="tela"> <img src="./imagens/logo-facebook.jpg" alt="facebook"></a><br>
+                <a href="./insta.html" target="tela"> <img src="./imagens/logo-instagram.jpg" alt="instagram"></a><br>
+                <a href="./github.html" target="tela"> <img src="./imagens/logo-github.jpg" alt="github"></a><br>
+                <a href="./linkedin.html" target="tela"> <img src="./imagens/logo-linkedin.jpg" alt="linkedin"></a><br>
                 
         </section>
     </main>
